[project]
name = "test_report_generator"
version = "0.1.5"
authors = [
  { name="Marlon Junior", email="marlonrfjunior@gmail.com" },
]
description = "This is a library for generating a report for your automated tests."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/marlonrfjunior/test_report"
Issues = "https://github.com/marlonrfjunior/test_report/issues"