[metadata]
name = test_report
version = 0.1.0
author = Seu Nome
author_email = seu.email@example.com
description = Uma biblioteca para gerar relatórios de testes automatizados.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/seu_usuario/test_report
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    pandas
    matplotlib
include_package_data = true

[options.entry_points]
console_scripts =
    test-report = test_report.__main__:main
